fix bug with overlapping elements

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -8,6 +8,7 @@
   height: 70px;
   box-shadow: 0 4px 16px rgb(0 0 0 / 25%);
   background-color: #fff;
+  z-index: 1;
 }
 
 .link {
