--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -5,6 +5,7 @@
   overflow: auto;
   transition: 0.15s ease-in-out;
   opacity: 0;
+  z-index: 2;
 }
 
 .modal {
